--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,26 @@
-.App {
-  text-align: center;
+@font-face {
+  font-family: 'ExtraLight';
+  src: local('ExtraLight'),
+    url('./fonts/Kodchasan-ExtraLight.ttf') format('truetype');
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+@font-face {
+  font-family: 'Light';
+  src: local('Light'), url('./fonts/Kodchasan-Light.ttf') format('truetype');
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+@font-face {
+  font-family: 'Regular';
+  src: local('Regular'), url('./fonts/Kodchasan-Regular.ttf') format('truetype');
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+@font-face {
+  font-family: 'Medium';
+  src: local('Medium'), url('./fonts/Kodchasan-Medium.ttf') format('truetype');
 }
-
-.App-link {
-  color: #61dafb;
+@font-face {
+  font-family: 'SemiBold';
+  src: local('SemiBold'),
+    url('./fonts/Kodchasan-SemiBold.ttf') format('truetype');
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+@font-face {
+  font-family: 'Bold';
+  src: local('Bold'), url('./fonts/Kodchasan-Bold.ttf') format('truetype');
 }
