--- a/src/components/tasks/TaskItem.module.css
+++ b/src/components/tasks/TaskItem.module.css
@@ -3,9 +3,14 @@
   display: flex;
   align-items: center;
   padding: 10px 20px;
-  margin-bottom: 25px;
+  margin-bottom: 15px;
   border-radius: 10px;
   background-color: var(--primary300);
+  transition: 0.3s;
+}
+
+.task {
+  opacity: 1;
 }
 
 .task--finished {
@@ -17,22 +22,24 @@
   flex-direction: column;
   justify-content: center;
   flex: 1;
+  margin-right: 10px;
 }
 
 .task__main__title {
   font-family: SemiBold;
-  font-size: 20px;
+  font-size: 16px;
   line-height: 140%;
-  color: var(--text);
+  color: #f3f3f3;
 }
 
 .task__main__date {
   margin: 4px 0 2px;
   font-family: Bold;
-  font-size: 14px;
-  color: var(--subtext);
+  font-size: 13px;
+  color: #cdb5c4;
 }
 
-.task--finished * {
+.task--finished .task__main__title,
+.task--finished .task__main__date {
   text-decoration: line-through;
 }
