--- a/src/components/interface/FixedButton.css
+++ b/src/components/interface/FixedButton.css
@@ -10,15 +10,15 @@
   padding: 12px 0;
   border: none;
   border-radius: 40px;
-  box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.4),
-    inset 0 2px 4px rgba(255, 255, 255, 0.4);
+  box-shadow: 0 -1px 2px rgba(0, 0, 0, 0.5),
+    inset 0 2px 2px rgba(255, 255, 255, 0.5);
   font-family: SemiBold;
   font-size: 18px;
   text-transform: uppercase;
   background-color: var(--primary100);
-  color: var(--text);
+  color: #f3f3f3;
   cursor: pointer;
-  transition: 0.4s ease-in;
+  transition: 0.2s ease-in;
   z-index: 10;
 }
 
@@ -33,7 +33,7 @@
 
 @media (hover: hover) {
   .add-task-button {
-    color: var(--subtext);
+    color: #f3f3f3;
   }
 
   .add-task-button:hover {
