--- a/src/components/interface/FormButton.css
+++ b/src/components/interface/FormButton.css
@@ -8,10 +8,17 @@
   border: none;
   border-radius: 40px;
   box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.4),
-    inset 0 2px 4px rgba(255, 255, 255, 0.4);
+    inset 0 2px 4px rgba(255, 255, 255, 0.2);
   font-family: SemiBold;
   font-size: 28px;
-  background-color: var(--primary300);
+  background-color: #532c44;
   color: var(--subtext);
   cursor: pointer;
+}
+
+#light .new-task__form__btn {
+  background-color: #3e1d30;
+  color: #fbc3e4;
+  box-shadow: 0 -2px 10px rgba(255, 255, 255, 0.3),
+    inset 0 2px 10px rgba(40, 20, 32, 0.6);
 }
