--- a/src/components/tasks/TaskTime.module.css
+++ b/src/components/tasks/TaskTime.module.css
@@ -3,10 +3,14 @@
   flex-direction: row;
   width: 100%;
   font-family: SemiBold;
-  font-size: 13px;
-  color: var(--primary500);
+  font-size: 12px;
+  color: #986683;
 }
 
 .task__main__time span {
   margin-right: 5px;
+}
+
+.task__main__time__done {
+  filter: brightness(145%);
 }
