--- a/src/components/tasks/controls/RemoveBox.module.css
+++ b/src/components/tasks/controls/RemoveBox.module.css
@@ -14,7 +14,7 @@
   width: 100%;
   height: 2px;
   border-radius: 1px;
-  background-color: var(--subtext);
+  background-color: #cdb5c4;
 }
 
 .task__removebox__slash1 {
