--- a/src/components/tasks/dnd/Grabbox.module.css
+++ b/src/components/tasks/dnd/Grabbox.module.css
@@ -14,7 +14,7 @@
   right: 0;
   height: 2px;
   border-radius: 1px;
-  background-color: var(--subtext);
+  background-color: #cdb5c4;
 }
 
 .task__grabbox__bar1 {
