--- a/src/components/interface/FixedButton.css
+++ b/src/components/interface/FixedButton.css
@@ -15,10 +15,10 @@
   font-family: SemiBold;
   font-size: 18px;
   text-transform: uppercase;
-  background-color: var(--primary100);
+  background-color: var(--primary300);
   color: #f3f3f3;
   cursor: pointer;
-  transition: 0.2s ease-in;
+  transition: 0.25s ease-in;
   z-index: 10;
 }
 
@@ -41,5 +41,14 @@
       inset 0 2px 5px rgba(255, 255, 255, 0.2);
     background-color: var(--primary500);
     color: #fff;
+  }
+}
+
+@media (min-width: 651px) {
+  .add-task-button {
+    bottom: 70px;
+  }
+  .add-task-button--hidden {
+    transform: translate(-50%, 400%);
   }
 }
