--- a/src/App.css
+++ b/src/App.css
@@ -25,7 +25,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: var(--primary500);
+  background-color: #412635;
   min-height: 100vh;
 }
 
@@ -47,7 +47,7 @@
     min-height: 90vh;
     padding: 2% 4% 10%;
     border-radius: 30px;
-    box-shadow: 0px 0px 8px var(--primary50), inset 0 0 4px var(--subtext);
+    box-shadow: 0px 0px 8px var(--primary100), inset 0 0 3px var(--text);
   }
 }
 
